test/classes/initializers/cond-only-then-2.good
cond-only-then-2.chpl:8: In initializer:
cond-only-then-2.chpl:9: error: cannot initialize fields in an if statement in phase 1
